RESOLVED FIXED189993
REGRESSION(r236365): [GTK] Many form-related tests are failing
https://bugs.webkit.org/show_bug.cgi?id=189993
Summary REGRESSION(r236365): [GTK] Many form-related tests are failing
Alicia Boya García
Reported 2018-09-26 07:35:24 PDT
The following tests are failing on GTK since r236365-236372: http/tests/fileapi/xhr-send-form-data-filename-escaping.html http/tests/fileapi/xhr-send-form-data-mimetype-normalization.html http/tests/local/formdata/send-form-data-constructed-from-form-using-open-panel.html http/tests/misc/form-blob-challenge.html
Attachments
Patch (3.28 KB, patch)
2018-11-09 06:24 PST, Carlos Garcia Campos
mcatanzaro: review+
Ms2ger (he/him; ⌚ UTC+1/+2)
Comment 1 2018-09-26 07:45:03 PDT
Bug 189777 / r236365 looks highly suspicious.
Alicia Boya García
Comment 2 2018-09-26 08:38:18 PDT
Carlos Garcia Campos
Comment 3 2018-11-09 06:24:29 PST
Carlos Garcia Campos
Comment 4 2018-11-09 06:24:59 PST
*** Bug 191361 has been marked as a duplicate of this bug. ***
Michael Catanzaro
Comment 5 2018-11-09 07:04:25 PST
Comment on attachment 354334 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=354334&action=review > Source/WebCore/platform/network/soup/ResourceRequestSoup.cpp:77 > - return switchOn(element.data, > + switchOn(element.data, It's a shame the compiler didn't warn about this, actually. I guess because switchOn returns void, it figures the return type of the function matches... but still, nobody would write this intentionally. :(
Carlos Garcia Campos
Comment 6 2018-11-09 08:15:13 PST
Note You need to log in before you can comment on or make changes to this bug.