REGRESSION(r236365): [GTK] Many form-related tests are failing https://bugs.webkit.org/show_bug.cgi?id=189993

Reviewed by Michael Catanzaro.

Source/WebCore:

Only the first form data element is added to the message body due to a return added by mistake in r236365.

* platform/network/soup/ResourceRequestSoup.cpp:
(WebCore::ResourceRequest::updateSoupMessageBody const): Remove return.

LayoutTests:

Remove expectations for tests that are passing now.

* platform/gtk/TestExpectations:

Canonical link: https://commits.webkit.org/206244@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238030 268f45cc-cd09-0410-ab3c-d52691b4dbfc